<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="au.id.swalladge.quiz_android.QuizQuestion">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/questionNumber"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="question description placeholder"
            android:id="@+id/qDescription"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:id="@+id/options">
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/opt1" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/opt2" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New RadioButton"
            android:id="@+id/opt3" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/opt4" />

            <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dontKnow"
            android:id="@+id/opt0"
            android:checked="true" />
</RadioGroup>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previousButton"
                android:id="@+id/previousBtn"
                android:layout_gravity="center_horizontal"
                android:onClick="previous" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitButton"
                android:id="@+id/submitBtn"
                android:onClick="submit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NextButton"
                android:id="@+id/nextBtn"
                android:onClick="next" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
